--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "github-build": "ng build --configuration production --base-href 'https://wargunnerguy.github.io/jupiter-frontpage/'",
+    "github-deploy": "npx angular-cli-ghpages --dir=dist/jupiter-frontpage/browser --no-silent"
   },
   "prettier": {
     "overrides": [
